internal/compiler/testdata/fuzz/crashers/478015c2315082d530ae5052b945d91bd2ec00ee.output
panic: runtime error: invalid memory address or nil pointer dereference
[signal SIGSEGV: segmentation violation code=0x1 addr=0x0 pc=0x53b6b2]

goroutine 1 [running]:
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c040, 0x0, 0x5a1bc0, 0xc000010030, 0x0, 0x0)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:241 +0x52
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c040, 0xc000072580, 0x24540, 0xc00004f238, 0x409618, 0x56f2a0)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:257 +0x7a8
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c040, 0xc000072b00, 0xc000024580, 0x5a0002, 0xc00009a180, 0x5a2820)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:253 +0x680
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c040, 0xc000073080, 0xc000024480, 0xc000074840, 0xc00004f508, 0x505426)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:253 +0x680
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c040, 0xc000073600, 0x506820, 0xc000010020, 0xc000073b80, 0x5a2b20)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:253 +0x680
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c040, 0xc000073b80, 0x5a2b20, 0xc00009a180, 0xc000074840, 0x1)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:253 +0x680
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c040, 0xc0000742c0, 0x1, 0x5a2820, 0x5a2820, 0xc000024280)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:253 +0x680
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c040, 0xc000074840, 0x5788c0, 0x5a2820, 0xc000024180, 0xc00004faf0)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:253 +0x680
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileResultColumn(0xc00000c040, 0xc00005e060, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x12, 0xc00004fb40)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:228 +0x223
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileSelectCoreSelect(0xc00000c040, 0xc000070000, 0x40b616, 0xc000024600, 0x40, 0x38)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:142 +0xf3
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileSelectCore(0xc00000c040, 0xc000070000, 0x0, 0xc00004fc60, 0x411143, 0xc000024600)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:117 +0x127
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileSelect(0xc00000c040, 0xc00006e000, 0x0, 0x2, 0xc000014133, 0x0)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:70 +0xb6
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileInternal(0xc00000c040, 0xc00006c000, 0x0, 0x2, 0xc000014133, 0x0)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:54 +0x7a
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).Compile(0xc00000c040, 0xc00006c000, 0x0, 0x0, 0x0, 0x0)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:34 +0x54
github.com/tomarrell/lbadd/internal/compiler.Fuzz(0x7f19e9600000, 0x11, 0x11, 0x4)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler_fuzzy.go:38 +0x3a4
go-fuzz-dep.Main(0xc00004ff70, 0x1, 0x1)
	go-fuzz-dep/main.go:36 +0x1ad
main.main()
	github.com/tomarrell/lbadd/internal/compiler/go.fuzz.main/main.go:15 +0x52
exit status 2